--- a/FR5Portal/Parent/templates/parenthomepage.html
+++ b/FR5Portal/Parent/templates/parenthomepage.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Parent Page</h1>
     <h2>Children:</h2>
-    
+    <ul>
+        <li><button>Button 1</button></li>
+        <li><button>Button 2</button></li>
+        <li><button>Button 3</button></li>
+    </ul>
+    <button>Intervention Plan</button>
+    <button>Contact Guide</button>
 </body>
 </html>
