add buttons for children of parent

--- a/FR5Portal/Parent/templates/parenthomepage.html
+++ b/FR5Portal/Parent/templates/parenthomepage.html
@@ -10,9 +10,9 @@
     <h1>Parent Page</h1>
     <h2>Children:</h2>
     <ul>
-        <li><button>Button 1</button></li>
-        <li><button>Button 2</button></li>
-        <li><button>Button 3</button></li>
+        <li><button>Jameson Buckley</button></li>
+        <li><button>Mark Buckley</button></li>
+        <li><button>Angela Buckley</button></li>
     </ul>
     <button>Intervention Plan</button>
     <button>Contact Guide</button>
