Add spacing for buttons

--- a/FR5Portal/Parent/templates/parenthomepage.html
+++ b/FR5Portal/Parent/templates/parenthomepage.html
@@ -24,6 +24,14 @@
         #myButton:hover {
             background-color: #45a049; /* Background color on hover */
         }
+
+        h1 {
+            font-size: 3em;     /* Adjust the font size as needed */
+        }
+
+        ul {
+            margin-bottom: 40px;
+        }
     </style>
 
 </head>
