--- a/FR5Portal/Parent/templates/parenthomepage.html
+++ b/FR5Portal/Parent/templates/parenthomepage.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <h1>Parent Page</h1>
-    <h2>Children:</h2>
+    <h2>My Children:</h2>
     <ul>
         <li><button id="myButton">Jameson Buckley</button></li>
         <li><button id="myButton">Mark Buckley</button></li>
