Add Track Appointments button

--- a/FR5Portal/Parent/templates/parenthomepage.html
+++ b/FR5Portal/Parent/templates/parenthomepage.html
@@ -45,5 +45,6 @@
     </ul>
     <button>Intervention Plan</button>
     <button>Contact Guide</button>
+    <button>Track Appointments</button>
 </body>
 </html>
