Linked pages together except one.

--- a/views/InterventionParentPage.html
+++ b/views/InterventionParentPage.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1 class="center" style="color: #118506;">Intervention Plan</h1>
+    <button style="background-color: red; padding: 10px 10 px; font-size: 20px;"><a href="parenthomepage.html">Back</a></button>
     <div class = "click">
         <button class="button buttonyes">Approve</button>
         <button class="button buttonno">Deny</button>
-        <button class="button buttonconcern">Concern</button>
+        <button class="button buttonconcern"><a href="SubmitConcern.html">Concern</a></button>
         <button class="button buttonreffer">Refferals</button>
     </div>
     <p>some kind of plan or content</p>
