--- a/views/contactsPage.html
+++ b/views/contactsPage.html
@@ -22,7 +22,7 @@
         </table>
         <p></p>
         <div class="center">
-            <button>Back</button>
+            <button><a href="parenthomepage.html">Back</a></button>
         </div>
     </body>
 </head>
