--- a/views/SubmitConcern.html
+++ b/views/SubmitConcern.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Feedback Form</h1>
+    <button class="button"><a href="InterventionParentPage.html">Back</a></button>
     <form action="process_feedback.php" method="post">
         <div class="form-group">
             <label for="name">Your Name:</label>
