--- a/views/parenthomepage.html
+++ b/views/parenthomepage.html
@@ -43,8 +43,8 @@
         <li><button id="myButton">Mark Buckley</button></li>
         <li><button id="myButton">Angela Buckley</button></li>
     </ul>
-    <button>Intervention Plan</button>
-    <button>Contact Guide</button>
+    <button><a href="InterventionParentPage.html">Intervention Plan</a></button>
+    <button><a href="contactsPage.html">Contact Guide</a></button>
     <button>Track Appointments</button>
 </body>
 </html>
